# invoicely

./: README.md  pyproject.toml  requirements.txt
client/: models.py  serializers.py  urls.py  views.py
client/migrations/: 0001_initial.py  0002_alter_client_org_number.py
config/: settings.py  urls.py
