[tool.poetry]
name = "project_name"
version = "0.1.0"
description = "A simple Django invoice app"
authors = ["Louis Agyapong <agyapong.louis@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10.0"
Django = "^4.0"
django-debug-toolbar = "^3.2"
isort = "^5.7.0"
djangorestframework = "^3.13.1"
flake8 = "^3.9.0"
dj-database-url = "^0.5.0"
python-decouple = "^3.4"
djoser = "^2.1.0"
django-cors-headers = "^3.10.0"

[tool.poetry.dev-dependencies]
ipython = "^7.19.0"
django-extensions = "^3.1.5"
black = "^20.8b1"
mypy = "^0.790"
pywatchman = "^1.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
